[project]
name = "prereq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
reportExplicitAny = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D212", "D203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "D101",
    "D103",
    "INP001",
]
"docs/*" = [
    "S101",
    "D101",
    "D103",
    "INP001",
] 
"src/prereq/errors.py" = [
    "D101"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sphinx>=9.0.4",
    "sphinx-wagtail-theme>=6.5.0",
]
