[project]
name = "prereq"
version = "0.1.0b"
description = "Prereq is a dependency injection library for Python that is uncomplicated, and async-first."
readme = "README.md"
authors = [{name = "Nathan Zilora", email = "zwork101@gmail.com"}]
license="MIT"
license-files=["LICENSE.md"]
keyword = ["DI", "dependency", "dependency injection", "injection", "async", "simple"]

requires-python = ">=3.12"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/Zwork101/prereq"
Documentation = "https://prereq.readthedocs.io/en/latest/"
Repository = "https://github.com/Zwork101/prereq"
Issues = "https://github.com/Zwork101/prereq/issues"
Changelog = "https://github.com/Zwork101/prereq/blob/main/CHANGELOG.md"


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
reportExplicitAny = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D212", "D203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "D101",
    "D103",
    "INP001",
]
"docs/*" = [
    "S101",
    "D101",
    "D103",
    "INP001",
] 
"src/prereq/errors.py" = [
    "D101"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sphinx>=9.0.4",
    "sphinx-wagtail-theme>=6.5.0",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
